# src/main/java/vendredi/soir/karata/endpoint/rest/model/Game.java
@@ -12,4 +12,5 @@ public record Game(
     UUID currentDealId,
     DealState currentDeal,
     YouState you,
-    Boolean closed) {}
+    Boolean closed,
+    Long defaultBuyIn) {}
